# Beat_Studio

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  PRD.md  README.md  plan.md  pyproject.toml  requirements.txt
backend/: main.py
backend/config/: animation_styles.yaml  checkpoints.yaml  loras.yaml  nova_fade_constitution.yaml  settings.yaml
backend/routers/: audio.py  lora.py  mashup.py  nova_fade.py  storyboard.py  system.py  tasks.py  video.py
backend/services/audio/: analysis.py  analyzer.py  processing.py  types.py
backend/services/lora/: downloader.py  recommender.py  registry.py  trainer.py  types.py
backend/services/mashup/: analyst.py  curator.py  engineer.py  ingestion.py  memory.py
backend/services/nova_fade/: canonical_prompts.py  character.py  dj_video_generator.py  drift_tester.py  types.py
backend/services/prompt/: distiller.py  narrative_analyzer.py  prompt_composer.py  scene_generator.py  style_mapper.py  types.py
backend/services/shared/: config.py  hardware_detector.py  logging.py  task_manager.py  vram_manager.py
backend/services/storyboard/: __init__.py  service.py  state.py  types.py
backend/services/video/: assembler.py  beat_sync.py  cost_estimator.py  types.py  (+3 more)
backend/tests/: conftest.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
runpod_worker/: Dockerfile  requirements.txt  test_input.json
runpod_worker/src/: handler.py  models.py
scripts/: runpod_compare.py  setup_check.py  test_lora_inference.py
thoughts/ledgers/: CONTINUITY_CLAUDE-beat-studio.md
(+80 files in other folders)
